objects/Contact.object
<CustomObject><fields>
        <fullName>ACF_Alumni__c</fullName>
        <label>Alumni?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Asst_email__c</fullName>
        <label>Asst email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>ACF_Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Collaborative Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEE Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEE Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEE Registrant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEE Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experiential Learning Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend of Babson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grad CCD Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR / Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTYOO Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Alliance Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>ACF_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_Company_Name__c</fullName>
        <description>Used to retain data integrity in he Account object by matching to existing Account/Bus Org. This field will be manually reviewed and decision made on creating new Account or attaching to existing Account.</description>
        <inlineHelpText>Company name passed from an RFI, OE registration or imported list of campaign members</inlineHelpText>
        <label>Company (temp)</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Contact_owner_image__c</fullName>
        <formula>IF ( ACF_Reach_Out_to_Contact_Owner__c  = True, 
    IMAGE("servlet/servlet.FileDownload?file=01536000002vjrw" ,"Please reach out to Contact Owner Prior to connecting with this contact",45,45) + "Please reach out to Contact Owner prior to connecting with this contact" , "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Degree_Type__c</fullName>
        <inlineHelpText>Grad or U/G</inlineHelpText>
        <label>Degree type</label>
        <picklist>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grad</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Ugrad</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Division__c</fullName>
        <label>Division</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Educational_Background__c</fullName>
        <label>Educational Background</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Familiar_Name__c</fullName>
        <label>Familiar Name</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Gets_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gets Newsletter</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Graduation_Year_Graduate__c</fullName>
        <label>Graduation Year (Graduate)</label>
        <length>4</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Graduation_Year_Undergrad__c</fullName>
        <label>Graduation Year (Undergrad)</label>
        <length>4</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Job_Function__c</fullName>
        <label>Job Function</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Landing_Page__c</fullName>
        <inlineHelpText>Landing page URL of the most recent RFI</inlineHelpText>
        <label>Landing Page</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_Migrated_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migrated Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Migrated_Modified_Date__c</fullName>
        <label>Migrated Modified Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Historical reference</inlineHelpText>
        <label>Pivotal ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Potential_Action_Acct_Attention__c</fullName>
        <formula>IF (AND(ISBLANK( ACF_Company_Name__c ), ISBLANK( hed__Primary_Organization__c)),"No Action Needed", 
IF (AND(NOT(ISBLANK( ACF_Company_Name__c )), ISBLANK( hed__Primary_Organization__c)),"Account may need to be created", 
IF (ISBLANK(ACF_Company_Name__c),"No Action Needed", 
IF (ISBLANK( hed__Primary_Organization__c), "No Action Needed", 
IF (ACF_Company_Name__c = hed__Primary_Organization__r.Name , "Matches", 
"Is not the same account name: ACF_Company_Name__c = " + ACF_Company_Name__c + " and Primary Business Org = " + hed__Primary_Organization__r.Name)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Action: Acct Needs Attention</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Primary_Communication_Method__c</fullName>
        <label>Primary Communication Method</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Prospect_Convert_Date__c</fullName>
        <inlineHelpText>Date the prospect was converted to a different classification</inlineHelpText>
        <label>Prospect Convert Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Prospect_Engagement__c</fullName>
        <inlineHelpText>Link to a prospect engagement related to this person</inlineHelpText>
        <label>Prospect Engagement</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Prospect__c</fullName>
        <description>Used to set the Prospect Convert Date (since Classification a a multi-select picklist and cannot be used in a formula)</description>
        <inlineHelpText>Is this contact currently a Prospect?</inlineHelpText>
        <label>Prospect Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active_Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive_Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Questionable_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Questionable Contact</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Reach_Out_to_Contact_Owner__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Please reach out to Contact Owner Prior to connecting with this contact</inlineHelpText>
        <label>Reach Out to Contact Owner</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Referring_Page__c</fullName>
        <inlineHelpText>Referring page URL of the most recent RFI</inlineHelpText>
        <label>Referring Page</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_Symplicity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Symplicity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_US_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Citizen?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Works_Out_of_Office__c</fullName>
        <label>Works Out of Office</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Adjunct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjunct</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Affiliation_1__c</fullName>
        <description>Field used in personalization</description>
        <inlineHelpText>Field used in personalization</inlineHelpText>
        <label>Affiliation 1</label>
        <picklist>
            <picklistValues>
                <fullName>MBA Blended Learning MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM Boston Scientific Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC Certificate of Advanced Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC Certificate of Advanced Management Entrepreneurship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC Evening MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA Evening MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSA Evening MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM Evening MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA Fast Track MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA Full Time One Year MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM Full Time One Year MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSA Full Time Two Year MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA Full Time Two Year MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA Intel MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA Lucent Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSA Lucent Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM Lucent Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSA M.S. in Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS Bachelor of Science</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Affiliation_2__c</fullName>
        <label>Affiliation 2</label>
        <picklist>
            <picklistValues>
                <fullName>U2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U1994</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Affiliation_Display_Name__c</fullName>
        <label>Affiliation Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Affinities__c</fullName>
        <label>Affinities</label>
        <picklist>
            <picklistValues>
                <fullName>Real Estate Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undergraduate Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneurial Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CWEL Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutler Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMS Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate and Executive Education Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Executive Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin American Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Affinity Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Dance Ensemble Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Entrepreneurship Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Medal Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Distinguished Entrepreneurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents' Leadership Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Women in Business Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committees/Other Boards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Association Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseer Emeritus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Overseers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President's Council Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honorary Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member, Babson Corporation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Alternate_Email_2_Type__c</fullName>
        <label>Alternate Email 2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Alternate_Email_2__c</fullName>
        <label>Alternate Email 2</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Alternate_Email_Type__c</fullName>
        <label>Alternate Email Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Alumni_Directory_Name__c</fullName>
        <formula>FirstName + ' ' + ' ' + LastName + ' ' +  Affiliation_Display_Name__c + IF(Preferred_Salutation__c != '', ' "' + Preferred_Salutation__c + '"', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alumni Directory Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Alumni_Name_Affiliation_Display__c</fullName>
        <formula>FirstName &amp; BR() &amp; LastName &amp; BR() &amp; IF(  Preferred_Salutation__c != '', ' " ' +  Preferred_Salutation__c + ' " ', '') &amp; BR() &amp; Affiliation_Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alumni Name Affiliation Display</label>
        <type>Text</type>
    </fields><fields>
        <fullName>April__c</fullName>
        <label>Apr</label>
        <picklist>
            <picklistValues>
                <fullName>Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Associations__c</fullName>
        <label>Associations</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>August__c</fullName>
        <label>Aug</label>
        <picklist>
            <picklistValues>
                <fullName>Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Urgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>BMCServiceDesk__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>BMCServiceDesk__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Babson_Connector_Terms_Acceptance_Date__c</fullName>
        <label>Babson Connector Terms Acceptance Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Babson_Preferred_Affinities__c</fullName>
        <label>Babson Preferred Affinities</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Accountancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Distinguished Entrepreneurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admission Assistant Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admission Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHANA Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Delta Sig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Epsilon Pi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Kappa Psi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Admission Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Association Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amnesty International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian American Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian Pacific Student Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Accounting Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson African Culture Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Armenian Students' Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Art Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Association of Women MBAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Billiards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Boxing Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Brazilian Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Chamber Ensemble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Cheerleading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson Chess Society</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Birth_Name__c</fullName>
        <label>Birth Name</label>
        <length>55</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Blog__c</fullName>
        <label>Blog</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Business_Address_1__c</fullName>
        <label>Business - Address 1</label>
        <length>60</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Business_Address_2__c</fullName>
        <label>Business - Address 2</label>
        <length>60</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Business_Address_3__c</fullName>
        <label>Business - Address 3</label>
        <length>60</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Business_City__c</fullName>
        <label>Business - City</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Business_Country__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Business - Country</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business - Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Business_Postal_Code1__c</fullName>
        <label>Business - Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Business_Postal_Code__c</fullName>
        <label>Business - Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Business_State__c</fullName>
        <globalPicklist>State</globalPicklist>
        <label>Business - State</label>
        <type>Picklist</type>
    </fields>    </validationRules></CustomObject>